sass/_header.scss
.navbar{
    padding: 1.8rem 1rem;
    
    .navbar-toggler,
    .search-toggler{
        width: 48px;
        height: 48px;
        border-radius: 24px;
        box-shadow: 0 8px 15px 0 rgba(0, 0, 0, 0.15);
        background-color: map-get($theme-colors, 'primary');
        padding: 0;
        transition: all .3s;
        border: none;
        cursor: pointer;
    
        @include media-breakpoint-up('sm') {
            margin-left: 100px;
        }
        
        &:focus{
            outline: none;
        }
        
        svg{
            width:24px;
            height:24px;
        }
    }
    .navbar-brand{
        font-weight: bold;
        font-size: 30px;
        color: map-get($theme-colors, 'primary');
        max-width: calc(100% - 64px);
        
        img{
            width: 100%;
            max-width: 250px;
            max-height: 42px;
        }
    }
    .navbar-collapse{
        font-size: 16px;
        
        ul{
            li{
                a:hover{
                    color: map-get($theme-colors, 'primary');
                }
            }
        }
        
    }
    
    @each $breakpoint in map-keys($grid-breakpoints) {
        @include media-breakpoint-up($breakpoint) {
            &.navbar-expand-#{$breakpoint} ul li{
                a{
                    margin: 0 25px;
                }
                &:last-child() a{
                    margin-right: 0;
                }
                &:first-child() a{
                    margin-left: 0;
                }
            }
        }
    }

}

section.desktop-search{
    position: fixed;
    top: -100%;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: white;
    z-index: 9999;
    transition: all .4s cubic-bezier(0, 0.8, 0, 1);
    
    &.visible{
        top: 0;
        background-color: map-get($theme-colors, 'primary');
    }
    
    input[type=search]{
        position: absolute;
        top: 50%;
        left: 50%;
        width: 75%;
        font-size: 24px;
        transform: translate(-50%, -50%);
        background-color: transparent;
        border: none;
        border-bottom: 3px solid rgba(255, 255, 255, .7);
        color: white;
        @include placeholder-color(rgba(255, 255, 255, .7));
        
        &:focus{
            outline: none;
        }
    }
    
    button.close-search{
        position: absolute;
        top: 10px;
        right: 10px;
        color: white;
        font-size: 12px;
        box-shadow: none;
        text-shadow: none;
        font-weight: normal;
        background-color: transparent;
        border: none;
        cursor: pointer;
        
        svg{
            vertical-align: -45%;
        }
    }
}

